# ai-trading-engine

./: .env.example  .gitignore  AI_AGENT_WORKFLOW.md  README.md  download_yahoo_india_data.py  generate_intraday_test_data.py  generate_sample_data.py  main.py  optimize_sma.py  pyproject.toml  requirements.txt  run_multi_asset_backtest.py  run_rsi_generalization.py  run_rsi_monte_carlo.py  run_rsi_walkforward.py  run_strategy_ranking.py
.streamlit/: config.toml
config/: data_providers.yaml  nse_holidays.yaml  realtime.yaml
data/: HDFCBANK_15M.csv  HDFCBANK_1D.csv  HDFCBANK_1H.csv  HDFCBANK_5M.csv  ICICIBANK_15M.csv  ICICIBANK_1D.csv  ICICIBANK_1H.csv  ICICIBANK_5M.csv  INFY_15M.csv  INFY_1D.csv  INFY_1H.csv  INFY_5M.csv  RELIANCE_15M.csv  RELIANCE_1D.csv  RELIANCE_1H.csv  RELIANCE_5M.csv  RELIANCE_KITE_1D.csv  RELIANCE_KITE_5M.csv  TCS_15M.csv  TCS_1D.csv  TCS_1H.csv  TCS_5M.csv  TCS_KITE_1D.csv  TCS_KITE_5M.csv  download_manifest.csv  intraday_downtrend_5m.csv  intraday_flat_5m.csv  intraday_uptrend_5m.csv  sample_data.csv
docs/: ARCHITECTURE.md  AUTOMATION.md  CAPABILITIES.md  OPERATOR_QUICKSTART.md  PROVIDERS.md  PROVIDER_SESSIONS.md  SAFETY.md  strategy_support_matrix.md
frontend/: package-lock.json  package.json  tailwind.config.js
scripts/: analyze_trade_diagnostics.py  backtest_regime_strategies.py  check_provider_readiness.py  kite_auth_test.py  kite_historical_test.py  kite_instruments_test.py  kite_profile_test.py  list_strategy_library.py  run_daily_dry_run.py  run_decision.py  run_dras_pullback_fix_validation.py  run_dras_validation.py  run_scanner.py  (+10 more)
(+482 files in other folders)
