[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-engine"
version = "0.1.0"
description = "AI Quant Trading Engine"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
extraPaths = ["."]

[tool.pyre]
source_directories = ["."]
